--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "3.6.0",
     "react": "16.5.2",
     "react-dom": "16.5.2",
     "react-modal": "3.6.1",
-    "react-scripts": "2.0.3"
+    "react-scripts": "2.0.3",
+    "sass": "1.15.1",
+    "typeface-roboto": "0.0.54"
   },
   "devDependencies": {},
   "scripts": {
