--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "@material-ui/core": "3.6.0",
+    "font-awesome": "4.7.0",
     "react": "16.5.2",
     "react-dom": "16.5.2",
     "react-modal": "3.6.1",
     "react-scripts": "2.0.3",
     "sass": "1.15.1",
-    "typeface-roboto": "0.0.54"
+    "weather-icons": "1.3.2"
   },
   "devDependencies": {},
   "scripts": {
